--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -52,8 +52,12 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 ?>
 
 <style>
+  @media (max-width:610px){
 
-@media (max-width:610px){
+    body {
+      max-width: 100%;
+      overflow-x: hidden; 
+    }
 
 		.sidebar-left {
 		    background-color: #e4e4e4;
@@ -156,186 +160,183 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
     }
 
 }
-
-
 </style>
 
-<main id="explore-content" class="startpage-store " >
-<div class="GridFlex">
-<div class="GridFlex-cell sidebar-left">
-        <?php  echo $this->render('explore/partials/filter.phtml'); ?>
-</div>
-<div class="GridFlex-cell content">
-        <div class="contentcontainer">
+<main id="explore-content" class="startpage-store">
+  <div class="GridFlex">
+    <div class="GridFlex-cell sidebar-left">
+            <?php  echo $this->render('explore/partials/filter.phtml'); ?>
+    </div>
+    <div class="GridFlex-cell content">
+            <div class="contentcontainer">
 
-                        <div class="row"  id="featureProductsContainer">
+                            <div class="row"  id="featureProductsContainer">
 
+                                <?php
+                                if ($this->featureProducts) {
+                                              echo $this->render('home/partials/featured-products.phtml');
+                                }
+                                ?>
+                            </div>
+
+                            <div class="row">
                             <?php
-                            if ($this->featureProducts) {
-                                          echo $this->render('home/partials/featured-products.phtml');
-                            }
+                                        echo $this->partial('/home/partials/product_group.phtml', array(
+                                                "title"  => "GTK/Gnome",
+                                                "products" => $this->productsThemesGTK,
+                                                "catIDs" =>"366"
+                                            )
+                                        );
+
+                                        echo $this->partial('/home/partials/product_group.phtml', array(
+                                                "title"  => "KDE Plasma",
+                                                "products" => $this->productsThemesPlasma,
+                                                "catIDs" =>"365"
+                                            )
+                                        );
                             ?>
-                        </div>
+                            </div>
 
-                        <div class="row">
-                        <?php
+                            <div class="row blockpadding">
+                            <?php
+                                        echo $this->partial('/home/partials/product_group.phtml', array(
+                                                "title"  => "Window Managers",
+                                                "products" => $this->productsWindowmanager,
+                                                "catIDs" =>"147"
+                                            )
+                                        );
+
+                                        echo $this->partial('/home/partials/product_group.phtml', array(
+                                                "title"  => "Icons, Cursors",
+                                                "products" => $this->productsIconsCursors,
+                                                "catIDs" =>"386,107"
+                                            )
+                                        );
+                            ?>
+                            </div>
+
+                            <div class="row blockpadding">
+                            <?php
                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "GTK/Gnome",
-                                            "products" => $this->productsThemesGTK,
-                                            "catIDs" =>"366"
-                                        )
-                                    );
-
-                                    echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "KDE Plasma",
-                                            "products" => $this->productsThemesPlasma,
-                                            "catIDs" =>"365"
-                                        )
-                                    );
-                        ?>
-                        </div>
-
-                        <div class="row blockpadding">
-                        <?php
-                                    echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Window Managers",
-                                            "products" => $this->productsWindowmanager,
-                                            "catIDs" =>"147"
-                                        )
-                                    );
-
-                                    echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Icons, Cursors",
-                                            "products" => $this->productsIconsCursors,
-                                            "catIDs" =>"386,107"
-                                        )
-                                    );
-                        ?>
-                        </div>
-
-                        <div class="row blockpadding">
-                        <?php
-                                echo $this->partial('/home/partials/product_group.phtml', array(
-                                        "title"  => "Artwork, Wallpapers ",
-                                        "products" => $this->productsWallpapers,
-                                        "catIDs" =>"158,295"
-                                    )
-                                );
-
-
-                                    echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Artwork, Wallpapers (Original)",
-                                            "products" => $this->productsWallpapersOriginal,
+                                            "title"  => "Artwork, Wallpapers ",
+                                            "products" => $this->productsWallpapers,
                                             "catIDs" =>"158,295"
-
-                                        )
-                                    );
-                        ?>
-                        </div>
-                        <div class="row blockpadding" >
-                         <?php
-                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                             "title"  => "App Add-Ons",
-                                             "products" => $this->productsAddons,
-                                             "catIDs" =>"152"
-                                         )
-                                     );
-
-                                     echo $this->partial('/home/partials/product_group.phtml', array(
-                                             "title"  => "Applications",
-                                             "products" => $this->productsApps,
-                                             "catIDs" =>"233"
-                                         )
-                                     );
-
-                         ?>
-                        </div>
-
-                        <div class="row blockpadding">
-                        <?php
-                                           echo $this->partial('/home/partials/product_group.phtml', array(
-                                            "title"  => "Concepts, Screenshots",
-                                            "products" => $this->productsScreenshots,
-                                            "catIDs" =>"445,225"
                                         )
                                     );
 
-                        ?>
-                        </div>
 
-                        <?php /*
+                                        echo $this->partial('/home/partials/product_group.phtml', array(
+                                                "title"  => "Artwork, Wallpapers (Original)",
+                                                "products" => $this->productsWallpapersOriginal,
+                                                "catIDs" =>"158,295"
 
-                        <div class="row blockpadding supportersrow">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <?php
-                                        echo $this->partial('/home/partials/plingprojects.phtml', array(
-                                                "title"  => "Recently plinged Products",
-                                                "projects" => $this->plingproducts
                                             )
                                         );
                             ?>
                             </div>
-                        </div>
+                            <div class="row blockpadding" >
+                             <?php
+                                         echo $this->partial('/home/partials/product_group.phtml', array(
+                                                 "title"  => "App Add-Ons",
+                                                 "products" => $this->productsAddons,
+                                                 "catIDs" =>"152"
+                                             )
+                                         );
 
-                        <div class="row blockpadding supportersrow">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                         echo $this->partial('/home/partials/product_group.phtml', array(
+                                                 "title"  => "Applications",
+                                                 "products" => $this->productsApps,
+                                                 "catIDs" =>"233"
+                                             )
+                                         );
+
+                             ?>
+                            </div>
+
+                            <div class="row blockpadding">
                             <?php
-                                        echo $this->partial('/home/partials/users.phtml', array(
-                                                "title"  => "Latest Supporters",
-                                                "users" => $this->supporters
+                                               echo $this->partial('/home/partials/product_group.phtml', array(
+                                                "title"  => "Concepts, Screenshots",
+                                                "products" => $this->productsScreenshots,
+                                                "catIDs" =>"445,225"
                                             )
                                         );
+
                             ?>
                             </div>
-                        </div>
 
-                        <div class="row blockpadding">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <?php
-                                        echo $this->partial('/home/partials/users.phtml', array(
-                                                "title"  => "Latest  Community Members ",
-                                                "users" => $this->users
-                                            )
-                                        );
-                            ?>
+                            <?php /*
+
+                            <div class="row blockpadding supportersrow">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <?php
+                                            echo $this->partial('/home/partials/plingprojects.phtml', array(
+                                                    "title"  => "Recently plinged Products",
+                                                    "projects" => $this->plingproducts
+                                                )
+                                            );
+                                ?>
+                                </div>
                             </div>
-                        </div>
 
-                        */
-                        ?>
-             </div>
-</div>
-<div class="GridFlex-cell sidebar-right">
-        <aside  id="explore-sidebar" >
+                            <div class="row blockpadding supportersrow">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <?php
+                                            echo $this->partial('/home/partials/users.phtml', array(
+                                                    "title"  => "Latest Supporters",
+                                                    "users" => $this->supporters
+                                                )
+                                            );
+                                ?>
+                                </div>
+                            </div>
 
-        <?php
-            echo $this->render('/home/partials/common_rightsidebar.phtml');
-        ?>
+                            <div class="row blockpadding">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <?php
+                                            echo $this->partial('/home/partials/users.phtml', array(
+                                                    "title"  => "Latest  Community Members ",
+                                                    "users" => $this->users
+                                                )
+                                            );
+                                ?>
+                                </div>
+                            </div>
+
+                            */
+                            ?>
+                 </div>
+    </div>
+    <div class="GridFlex-cell sidebar-right">
+            <aside  id="explore-sidebar" >
+
+            <?php
+                echo $this->render('/home/partials/common_rightsidebar.phtml');
+            ?>
 
 
-        <div>
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Responsive New Displayblock -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-1150932386931372"
-                 data-ad-slot="1024407251"
-                 data-ad-format="auto"></ins>
-            <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
+            <div>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- Responsive New Displayblock -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-1150932386931372"
+                     data-ad-slot="1024407251"
+                     data-ad-format="auto"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
 
-            </script>
-        </div>
+                </script>
+            </div>
 
-        </aside>
-</div>
-</div>
-
-<div class="tooltip_templates" style="display: none">
-    <span id="tooltip_content">
-        <i class="fa fa-spinner"></i>
-    </span>
-</div>
+            </aside>
+    </div>
+  </div>
+  <div class="tooltip_templates" style="display:none">
+      <span id="tooltip_content">
+          <i class="fa fa-spinner"></i>
+      </span>
+  </div>
 </main>
 
 <script type="application/javascript">
@@ -351,7 +352,6 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                     $(target).empty().html('Service is temporarily unavailable. Our engineers are working quickly to resolve this issue. <br/>Find out why you may have encountered this error.');
                 }
             });
-
             return false;
         });
     });
